apps/outline-vpn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline-vpn
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: outline.a-tishbek.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline-vpn
                port:
                  number: 60000
  tls:
    - hosts:
        - outline.a-tishbek.info
      secretName: outline-vpn-tls
